# openrs

./: CMakeLists.txt
cmake/: ErisedUtils.cmake  FLANN.cmake  FindTBB.cmake  GTest.cmake
cmake/templates/: config.h.in
erised/: CMakeLists.txt
erised/core/: CMakeLists.txt
erised/core/src/: basic_statistic.h  csr_mat.h  cuda_csr-inl.h  cuda_csr.h  cuda_ptr.h  data_base.h  data_csr-inl.h  data_csr.cc  data_csr.h  data_csr_map-inl.h  data_csr_map.h  eigen_mat.h  exception.h  map_reduce.h  mat_base.h  mat_csr.h  parallel.h  sim_mat-inl.h  sim_mat.h  traits.h  triangular_mat-inl.h  triangular_mat.h  triangular_mat_base.h
erised/core/src/cuda/: cuda_csr.cu  cuda_csr_func.cu  cuda_csr_func.h
erised/core/test/: basic_statistic_test.cc  data_csr_map_test.cc  data_csr_test.cc  mat_csr_test.cc  parallel_test.cc  sample_test.cc  sim_mat_test.cc  traits_test.cc  triangular_mat_test.cc
erised/core/test/cuda/: cuda_csr_test.cu  cuda_ptr_test.cu
erised/filters/: CMakeLists.txt
erised/filters/src/: correlation.h  filter.h  flann.h  model.h  predict.h
erised/filters/test/: correlation_test.cc  flann_test.cc  predict_test.cc  simple_test.cc
src/core/: eigen_mat.h  mat_base.cc
