include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)

if (HAVE_CUDA)
  file(GLOB CU_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/cuda/*.cu)
  if (${SOURCES} and ${CU_SOURCES})
    cuda_add_library(erised_core ${SOURCES} ${CU_SOURCES})
  endif ()
else ()
  if (SOURCES)
    add_library(erised_core ${SOURCES})
  endif ()
endif ()

if (BUILD_TESTS)
  file(GLOB SOURCES_TEST ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc)
  foreach(local_file ${SOURCES_TEST})
    get_filename_component(local_filename ${local_file} NAME_WE)
    message("Compiling: ${local_file} ${SOURCES}")
    add_executable(${local_filename} ${local_file} ${SOURCES})
    target_link_libraries(${local_filename} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${TBB_LIBRARIES})
  endforeach()

  if (HAVE_CUDA)
    file(GLOB CU_SOURCES_TEST ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc)
    foreach(local_file ${CU_SOURCES_TEST})
      get_filename_component(local_filename ${local_file} NAME_WE)
      message("Compiling: ${local_file}")
      cuda_add_executable(${local_filename} ${local_file} ${SOURCES})
      target_link_libraries(${local_filename} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${TBB_LIBRARIES})
    endforeach ()
   endif ()
endif ()
