include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)

include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})

if (HAVE_CUDA)
  file(GLOB CU_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/cuda/*.cu)
  if (SOURCES AND CU_SOURCES)
    cuda_add_library(erised_core ${SOURCES} ${CU_SOURCES})
  endif ()
else ()
  if (SOURCES)
    add_library(erised_core ${SOURCES})
  endif ()
endif ()

if (BUILD_TESTS)
  file(GLOB SOURCES_TEST ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc)
  foreach(local_file ${SOURCES_TEST})
    get_filename_component(local_filename ${local_file} NAME_WE)
    message("Compiling: ${local_file} ${SOURCES} ${TBB_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${GTEST_LIBRARIES}")
    add_executable(${local_filename} ${local_file} ${SOURCES})
    cxx_test(${local_filename} ${local_file} ${GTEST_MAIN_LIBRARIES} ${GTEST_LIBRARIES})
    dep_flann(${local_filename})
    target_link_libraries(${local_filename} ${TBB_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${GTEST_LIBRARIES})
  endforeach()

  if (HAVE_CUDA)
    file(GLOB CU_SOURCES_TEST ${CMAKE_CURRENT_SOURCE_DIR}/test/cuda/*.cu)
    foreach(local_file ${CU_SOURCES_TEST})
      get_filename_component(local_filename ${local_file} NAME_WE)
      message("Compiling: ${local_file}")
      cuda_add_executable(${local_filename} ${local_file} ${SOURCES})
      target_link_libraries(${local_filename} ${TBB_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${GTEST_LIBRARIES})
    endforeach ()
   endif ()
endif ()
